--- a/XamlGrid/themes/generic.xaml
+++ b/XamlGrid/themes/generic.xaml
@@ -15,7 +15,7 @@ Free Software Foundation, Inc., 59 Temple Place - Suite 330,
 Boston, MA 02111-1307, USA.
 
 File:		generic.xaml
-Authors:	Dimitar Dobrev <dpldobrev@yahoo.com>
+Authors:	Dimitar Dobrev <dpldobrev@gmail.com>
 -->
 
 <ResourceDictionary
