--- a/XamlGrid/themes/generic.xaml
+++ b/XamlGrid/themes/generic.xaml
@@ -212,7 +212,7 @@ Authors:	Dimitar Dobrev <dpldobrev@gmail.com>
 	</Style>
 
 	<Style TargetType="xaml:Row">
-		<Setter Property="BorderThickness" Value="0,0,0,1" />
+		<Setter Property="BorderThickness" Value="0,0,1,1" />
 		<Setter Property="BorderBrush" Value="{StaticResource activeBorderColor}" />
 		<Setter Property="Background" Value="{StaticResource windowColor}" />
 		<Setter Property="HorizontalAlignment" Value="Left" />
@@ -283,9 +283,17 @@ Authors:	Dimitar Dobrev <dpldobrev@gmail.com>
 		<Setter Property="HorizontalContentAlignment" Value="{Binding DataType, RelativeSource={RelativeSource Self}, 
 																	  Converter={StaticResource typeToAlignmentConverter}}" />
 		<Setter Property="Visibility" Value="{Binding Column.Visibility, RelativeSource={RelativeSource Self}, Mode=TwoWay}" />
+		<Setter Property="Margin" Value="0,0,0,-1" />
 		<Setter Property="Padding" Value="6,4,6,4" />
-		<Setter Property="BorderThickness" Value="0,0,1,0" />
-		<Setter Property="BorderBrush" Value="{StaticResource activeBorderColor}" />
+		<Setter Property="BorderThickness" Value="1,0,0,1" />
+		<Setter Property="BorderBrush">
+			<Setter.Value>
+				<LinearGradientBrush MappingMode="Absolute" StartPoint="0,0" EndPoint="1,0">
+					<GradientStop Color="{xaml:Static Member=SystemColors.ActiveBorderColor}" Offset="0.999" />
+					<GradientStop Offset="1" />
+				</LinearGradientBrush>
+			</Setter.Value>
+		</Setter>
 		<Setter Property="ContentTemplate">
 			<Setter.Value>
 				<DataTemplate>
