Fixed the borders of special rows and changed the last column to be last given a relative size.
Signed-off-by: ddobrev <dpldobrev@gmail.com>

--- a/XamlGrid/themes/generic.xaml
+++ b/XamlGrid/themes/generic.xaml
@@ -54,73 +54,71 @@ Authors:	Dimitar Dobrev <dpldobrev@gmail.com>
 		<Setter Property="Template">
 			<Setter.Value>
 				<ControlTemplate TargetType="xaml:DataGrid">
-					<Border Background="{TemplateBinding Background}">
-						<Grid>
-							<Grid.RowDefinitions>
-								<RowDefinition Height="Auto" />
-								<RowDefinition />
-								<RowDefinition Height="Auto" />
-								<RowDefinition Height="Auto" />
-							</Grid.RowDefinitions>
-							<Grid>
-								<Grid.RowDefinitions>
-									<RowDefinition Height="Auto" />
-									<RowDefinition Height="Auto" />
-								</Grid.RowDefinitions>
-								<Grid.ColumnDefinitions>
-									<ColumnDefinition />
-									<ColumnDefinition Width="Auto" />
-								</Grid.ColumnDefinitions>
-								<xaml:HeaderRow ItemsSource="{Binding Columns, RelativeSource={RelativeSource TemplatedParent}}"
+                    <Grid Background="{TemplateBinding Background}">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition />
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="Auto" />
+                        </Grid.RowDefinitions>
+                        <Grid>
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <xaml:HeaderRow ItemsSource="{Binding Columns, RelativeSource={RelativeSource TemplatedParent}}"
 												   Visibility="{Binding HeaderVisibility, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
 												   Tag="{Binding ElementName=horizontalScrollBar}" />
-								<xaml:NewRow Grid.Row="1" ItemsSource="{Binding Columns, RelativeSource={RelativeSource TemplatedParent}}"
+                            <xaml:NewRow Grid.Row="1" ItemsSource="{Binding Columns, RelativeSource={RelativeSource TemplatedParent}}"
 												Visibility="{Binding NewRowVisibility, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
 												TabNavigation="Cycle" Tag="{Binding ElementName=horizontalScrollBar}" />
-								<TextBlock Grid.Column="1" Grid.RowSpan="2" Width="18" Visibility="{Binding ComputedVerticalScrollBarVisibility, ElementName=mainScroll}" />
-							</Grid>
-							<ScrollViewer Name="mainScroll" Grid.Row="1" IsTabStop="False" VerticalScrollBarVisibility="Auto" BorderThickness="{TemplateBinding BorderThickness}"
+                            <TextBlock Grid.Column="1" Grid.RowSpan="2" Width="18" Visibility="{Binding ComputedVerticalScrollBarVisibility, ElementName=mainScroll}" />
+                        </Grid>
+                        <ScrollViewer Name="mainScroll" Grid.Row="1" IsTabStop="False" VerticalScrollBarVisibility="Auto" BorderThickness="{TemplateBinding BorderThickness}"
 										  HorizontalScrollBarVisibility="Hidden" Padding="0" BorderBrush="{StaticResource activeBorderColor}" 
 										  xaml:ScrollExtensions.HorizontalOffset="{Binding Value, ElementName=horizontalScrollBar}">
-								<interactivity:Interaction.Behaviors>
-									<xaml:ScrollOnHomeEndBehaviour />
-									<xaml:DragScrollBehavior />
-								</interactivity:Interaction.Behaviors>
-								<xamlGrid:DataGridFacade.Controllers>
-									<xaml:ScrollIntoViewController />
-								</xamlGrid:DataGridFacade.Controllers>
-								<ItemsPresenter Margin="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Mode=OneWay,
+                            <interactivity:Interaction.Behaviors>
+                                <xaml:ScrollOnHomeEndBehaviour />
+                                <xaml:DragScrollBehavior />
+                            </interactivity:Interaction.Behaviors>
+                            <xamlGrid:DataGridFacade.Controllers>
+                                <xaml:ScrollIntoViewController />
+                            </xamlGrid:DataGridFacade.Controllers>
+                            <ItemsPresenter Margin="{Binding BorderThickness, RelativeSource={RelativeSource TemplatedParent}, Mode=OneWay,
 																 Converter={StaticResource thicknessToNegativeConverter}}">
-									<interactivity:Interaction.Behaviors>
-										<xaml:HandleNavigationBehaviour />
-									</interactivity:Interaction.Behaviors>
-								</ItemsPresenter>
-							</ScrollViewer>
-							<Grid Grid.Row="2">
-								<Grid.RowDefinitions>
-									<RowDefinition Height="Auto" />
-									<RowDefinition Height="Auto" />
-								</Grid.RowDefinitions>
-								<Grid.ColumnDefinitions>
-									<ColumnDefinition />
-									<ColumnDefinition Width="Auto" />
-								</Grid.ColumnDefinitions>
-								<xaml:FooterRow ItemsSource="{Binding Columns, RelativeSource={RelativeSource TemplatedParent}}"
+                                <interactivity:Interaction.Behaviors>
+                                    <xaml:HandleNavigationBehaviour />
+                                </interactivity:Interaction.Behaviors>
+                            </ItemsPresenter>
+                        </ScrollViewer>
+                        <Grid Grid.Row="2">
+                            <Grid.RowDefinitions>
+                                <RowDefinition Height="Auto" />
+                                <RowDefinition Height="Auto" />
+                            </Grid.RowDefinitions>
+                            <Grid.ColumnDefinitions>
+                                <ColumnDefinition />
+                                <ColumnDefinition Width="Auto" />
+                            </Grid.ColumnDefinitions>
+                            <xaml:FooterRow ItemsSource="{Binding Columns, RelativeSource={RelativeSource TemplatedParent}}"
 												   Visibility="{Binding FooterVisibility, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
 												   DataContext="{Binding Items, RelativeSource={RelativeSource TemplatedParent}}"
 												   Tag="{Binding ElementName=horizontalScrollBar}" />
-								<ScrollBar Name="horizontalScrollBar" Grid.Row="1" IsTabStop="False"
+                            <ScrollBar Name="horizontalScrollBar" Grid.Row="1" IsTabStop="False"
 										   DataContext="{Binding ElementName=mainScroll}"
 										   Visibility="{Binding Maximum, RelativeSource={RelativeSource Self},
 																Converter={StaticResource numberToVisibilityConverter}}"
 										   Orientation="Horizontal" ViewportSize="{Binding ViewportWidth}"
 										   Maximum="{Binding ScrollableWidth}" Value="{Binding HorizontalOffset, Mode=TwoWay}" />
-								<TextBlock Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Width="18"
+                            <TextBlock Grid.Row="1" Grid.Column="1" Grid.ColumnSpan="2" Width="18"
 										   Visibility="{Binding ComputedVerticalScrollBarVisibility, ElementName=mainScroll}" />
-							</Grid>
-						</Grid>
-					</Border>
-				</ControlTemplate>
+                        </Grid>
+                    </Grid>
+                </ControlTemplate>
 			</Setter.Value>
 		</Setter>
 	</Style>
@@ -564,8 +562,8 @@ Authors:	Dimitar Dobrev <dpldobrev@gmail.com>
                             <ScrollViewer IsTabStop="False" BorderThickness="0" Padding="0" 
 									  VerticalScrollBarVisibility="Hidden" HorizontalScrollBarVisibility="Hidden"
 									  xaml:ScrollExtensions.HorizontalOffset="{Binding Tag.Value, 
-																							  RelativeSource={RelativeSource TemplatedParent},
-																							  Mode=TwoWay}">
+																					   RelativeSource={RelativeSource TemplatedParent},
+																					   Mode=TwoWay}">
                                 <interactivity:Interaction.Behaviors>
                                     <xaml:SyncScrollBehavior />
                                 </interactivity:Interaction.Behaviors>
@@ -586,11 +584,11 @@ Authors:	Dimitar Dobrev <dpldobrev@gmail.com>
 	</Style>
 
 	<Style TargetType="xaml:NewRow" BasedOn="{StaticResource specialRow}">
-		<Setter Property="BorderThickness" Value="1,1,0,0" />
+		<Setter Property="BorderThickness" Value="0,1,0,0" />
 	</Style>
 
 	<Style TargetType="xaml:FooterRow" BasedOn="{StaticResource specialRow}">
-		<Setter Property="BorderThickness" Value="1,0,0,1" />
+		<Setter Property="BorderThickness" Value="0,0,0,1" />
 	</Style>
 
 </ResourceDictionary>
