--- a/XamlGrid/themes/generic.xaml
+++ b/XamlGrid/themes/generic.xaml
@@ -326,7 +326,7 @@ Authors:	Dimitar Dobrev <dpldobrev@gmail.com>
 		<Setter Property="HorizontalContentAlignment" Value="{Binding DataType, RelativeSource={RelativeSource Self}, 
 																	  Converter={StaticResource typeToAlignmentConverter}}" />
 		<Setter Property="Visibility" Value="{Binding Column.Visibility, RelativeSource={RelativeSource Self}, Mode=TwoWay}" />
-		<Setter Property="Padding" Value="6,4,6,4" />
+		<Setter Property="Padding" Value="4" />
 		<Setter Property="Margin" Value="0,0,0,-1" />
 		<Setter Property="BorderThickness" Value="0,0,1,1" />
 		<Setter Property="BorderBrush">
@@ -377,7 +377,7 @@ Authors:	Dimitar Dobrev <dpldobrev@gmail.com>
 											<DiscreteObjectKeyFrame KeyTime="0:0:0" Value="-1,0,0,0" />
 										</ObjectAnimationUsingKeyFrames>
 										<ObjectAnimationUsingKeyFrames Storyboard.TargetProperty="Padding">
-											<DiscreteObjectKeyFrame KeyTime="0:0:0" Value="5,1,5,1" />
+											<DiscreteObjectKeyFrame KeyTime="0:0:0" Value="3,1,3,1" />
 										</ObjectAnimationUsingKeyFrames>
 									</Storyboard>
 								</VisualState>
@@ -454,8 +454,7 @@ Authors:	Dimitar Dobrev <dpldobrev@gmail.com>
 											<DiscreteObjectKeyFrame KeyTime="0:0:0">
 												<DiscreteObjectKeyFrame.Value>
 													<DataTemplate>
-														<xaml:Editor Content="{Binding}" 
-																	 Value="{Binding Tag.Value, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
+														<xaml:Editor Value="{Binding Tag.Value, RelativeSource={RelativeSource TemplatedParent}, Mode=TwoWay}"
 																	 DataType="{Binding Tag.DataType, RelativeSource={RelativeSource TemplatedParent}}" />
 													</DataTemplate>
 												</DiscreteObjectKeyFrame.Value>
